# ros2_pixi_playground

./: .gitignore  CMakeLists.txt  README.md  pixi.toml
src/: publisher.cpp  subscriber.cpp  usbCameraPublisher.cpp  visualizer.cpp
src/CycloneDDS/: CMakeLists.txt  CycloneDDS.xml  Image.idl  QoS.md  README.md  framePublisher.cpp  frameSubscriber.cpp
src/simple_publisher_subscriber/: publisher.cpp  subscriber.cpp
src/web_camera_publisher_subscriber/: README.md  webCameraFrameVisualizer.cpp  webCameraPublisher.cpp  webCameraSubscriber.cpp
